--- a/css/style.css
+++ b/css/style.css
@@ -51,29 +51,75 @@ font-family: 'Montserrat';
   border: 1px solid black;
 }
 
+.bug6{
+  background-color: rgb(211, 50, 144);
+  border: 1px solid rgb(255, 255, 255);
+}
+
+.bug7{
+  background-color: rgb(27, 55, 216);
+  border: 1px solid rgb(8, 8, 8);
+}
+
+.btm{
+  color: white;
+  border: 1px solid white;
+  padding: 15px 40px;
+  border-radius: 25px;
+}
 
 .content{
-  width: 100vw;
-height: calc(100vh - 50px);
+ width: 100vw;
+ height: calc(100vh - 50px);
+}
+
+.content .box-content{
+ width:calc(100% - 230px);
+ overflow: auto;
 }
 
 .sidebar{
-  width: 220px;
-  height: calc(100vh - 50px);
+ width: 230px;
+ height: calc(100vh - 50px);
+ background-color:black;
+ flex-direction: column;
+ justify-content: space-between;
 }
 
+.sidebar .row-high{
+  height: 80%;
+}
+  
+
+.sidebar .row-low{
+  height: 20%;
+  position: sticky;
+}
+
+.sidebar .row-low .col{
+  height: 50%;
+}
+
+
+
+
+
 .bar-fixed{
-  width: calc(100vw - 220px);
-  height: 50px;
-  position: fixed;
+  width: calc(100vw - 230px);
+  height: 90px;
+  background-color: rgb(8, 11, 18);
+  position: sticky;
   z-index: 999;
   top: 0px;
   right: 0px;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .player{
   width: 100vw;
   height: 90px;
+  background-color: rgb(40, 40, 40);
 }
 
 .player .row-player{
@@ -85,7 +131,9 @@ justify-content: space-between;
   width: 100%;
 }
 
-
+p{
+  color: white;
+}
 
 
 
@@ -107,6 +155,7 @@ justify-content: space-between;
  .bar-fixed{
   width: calc(100vw - 50px);
   height: 50px;
+  
   
 }
 }
