--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ font-family: 'Montserrat';
   display: flex;
 }
 
+.flex-d{
+  flex-direction: row;
+}
+
 .bug{
   background-color: lightgray;
   min-height: 50px;
@@ -52,13 +56,17 @@ font-family: 'Montserrat';
 }
 
 .bug6{
-  background-color: rgb(211, 50, 144);
+  background-color: rgb(201, 33, 33);
   border: 1px solid rgb(255, 255, 255);
 }
 
 .bug7{
   background-color: rgb(27, 55, 216);
-  border: 1px solid rgb(8, 8, 8);
+  border: 1px solid rgb(255, 255, 255);
+}
+
+li{
+  list-style-type: none;
 }
 
 .btm{
@@ -70,7 +78,9 @@ font-family: 'Montserrat';
 
 .content{
  width: 100vw;
- height: calc(100vh - 50px);
+ height: calc(100vh - 80px);
+ overflow: auto;
+ background-color:rgb(20, 25, 34) ;
 }
 
 .content .box-content{
@@ -80,34 +90,95 @@ font-family: 'Montserrat';
 
 .sidebar{
  width: 230px;
- height: calc(100vh - 50px);
+ min-height: 450px;
+ height: 100%;
  background-color:black;
+ color: gray;
  flex-direction: column;
  justify-content: space-between;
+ padding: 15px 15px 0 15px
+}
+.sidebar .row-high{
+  height: calc(100% - 80px);
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
-.sidebar .row-high{
-  height: 80%;
+.sidebar .row-high .image-spotfy-desktop img{
+  width: 140px;
 }
-  
+
+.sidebar .row-high .image-spotfy-mobile{
+  display: none;
+}
+
+.sidebar .row-high .playlist-top{
+  padding-top: 10px;
+}
+
+.sidebar .row-high .playlist-top,.playlist-down ul li,span{
+  padding: 5px 0 10px 3px;
+  text-transform:capitalize ;
+  font-size: 0.9rem;
+}
+
+.sidebar .row-high .playlist-down h3{
+  color: white;
+  text-transform: capitalize;
+  font-size: 1.1rem;
+  padding: 5px 0 10px 3px;
+}
+
+.sidebar .row-high .playlist-down .plus
+
+.sidebar .row-high .playlist-top ul li div img{
+width: 26px;
+height:26px;
+}
+
+
+
 
 .sidebar .row-low{
-  height: 20%;
+  height: 80px;
   position: sticky;
 }
 
 .sidebar .row-low .col{
   height: 50%;
+  justify-content: flex-start;
+  align-items: center;
 }
 
+.sidebar .row-low .col svg{
+  width: 30px;
+  height: 30px;
+}
 
+.sidebar .row-low .col span{
+  padding: 0px 10px;
+}
+
+.sidebar .row-low .col .profile{
+  width: 30px;
+  height: 30px;
+  background-color: rgb(128, 128, 128);
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.sidebar .row-low .col .profile img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 
 
 
 .bar-fixed{
   width: calc(100vw - 230px);
   height: 90px;
-  background-color: rgb(8, 11, 18);
+  background-color: rgba(8, 11, 18, 0.5);
   position: sticky;
   z-index: 999;
   top: 0px;
@@ -116,8 +187,27 @@ font-family: 'Montserrat';
   align-items: center;
 }
 
+.menu{
+  width: 100%;
+justify-content: center;
+
+}
+
+.menu ul{
+flex-wrap:wrap;
+justify-content: center;
+}
+
+.menu ul li{
+padding: 20px 30px;
+}
+
+
+
+
+
 .player{
-  width: 100vw;
+  width: 100%;
   height: 90px;
   background-color: rgb(40, 40, 40);
 }
@@ -148,14 +238,50 @@ p{
 
 
 @media screen and (max-width:600px) {
- .sidebar{
+.content .box-content{
+  width: 100%;
+}
+  .sidebar{
   width: 50px;
+  padding: 10px;
  }
 
  .bar-fixed{
   width: calc(100vw - 50px);
   height: 50px;
-  
-  
 }
+
+.sidebar{
+  flex-direction: column;
+  align-content: center;
 }
+
+.sidebar .row-low{
+  flex-direction: column;
+}
+
+.sidebar .row-low .col .download{
+  width: 90%;
+  height: 100%;
+}
+
+.sidebar .row-low .col .profile{
+  width: 100%;
+  height: 65%;
+}
+
+
+.desktop,
+.playlist-down,
+.playlist-top ul li span,
+.sidebar .row-high .image-spotfy-desktop,
+.sidebar .row-low .col span{
+  display: none;
+
+}
+
+}
+
+
+
+@media screen and (max-width:700px) {}
