--- a/css/style.css
+++ b/css/style.css
@@ -26,47 +26,23 @@ font-family: 'Montserrat';
   flex-direction: row;
 }
 
+h1,h2,h3,h4{
+  color: white;
+}
 .bug{
   background-color: lightgray;
   min-height: 50px;
-  width: 50px;
+  width: 180px;
+  height: 180px;
 }
 .bug2{
   background-color: lightgreen;
   min-height: 50px;
   width: 50px;
 }
-.bug3{
-  background-color: rgb(182, 37, 37);
-  min-height: 50px;
-  width: 50px;
-}
 
-.bug4{
-  background-color: rgb(253, 249, 14);
-  min-height: 50px;
-  width: 50px;
-}
-
-.bug5{
-  background-color: rgb(250, 137, 9);
-  min-height: 50px;
-  width: 50px;
-  border: 1px solid black;
-}
-
-.bug6{
-  background-color: rgb(201, 33, 33);
-  border: 1px solid rgb(255, 255, 255);
-}
-
-.bug7{
-  background-color: rgb(27, 55, 216);
-  border: 1px solid rgb(255, 255, 255);
-}
-
-li{
-  list-style-type: none;
+ul{
+  list-style: none;
 }
 
 .btm{
@@ -79,8 +55,8 @@ li{
 .content{
  width: 100vw;
  height: calc(100vh - 80px);
- overflow: auto;
  background-color:rgb(20, 25, 34) ;
+ position: relative;
 }
 
 .content .box-content{
@@ -88,7 +64,7 @@ li{
  overflow: auto;
 }
 
-.sidebar{
+aside{
  width: 230px;
  min-height: 450px;
  height: 100%;
@@ -96,70 +72,63 @@ li{
  color: gray;
  flex-direction: column;
  justify-content: space-between;
- padding: 15px 15px 0 15px
+ padding: 15px 15px 0 15px;
 }
-.sidebar .row-high{
+
+aside .row-high{
   height: calc(100% - 80px);
   flex-direction: column;
   justify-content: flex-start;
 }
 
-.sidebar .row-high .image-spotfy-desktop img{
+aside .row-high .image-spotfy-desktop img{
   width: 140px;
 }
 
-.sidebar .row-high .image-spotfy-mobile{
+aside .row-high .image-spotfy-mobile{
   display: none;
 }
 
-.sidebar .row-high .playlist-top{
+aside .row-high .playlist-top{
   padding-top: 10px;
 }
 
-.sidebar .row-high .playlist-top,.playlist-down ul li,span{
+aside .row-high .playlist-top,.playlist-down ul li,span{
   padding: 5px 0 10px 3px;
   text-transform:capitalize ;
   font-size: 0.9rem;
 }
 
-.sidebar .row-high .playlist-down h3{
+aside .row-high .playlist-down{
+  height: 100%;
+  overflow: auto;
+}
+
+aside .row-high h3{
   color: white;
   text-transform: capitalize;
   font-size: 1.1rem;
   padding: 5px 0 10px 3px;
 }
 
-
-
-.sidebar .row-high .playlist-top ul li div img{
+aside .img-svg{
 width: 26px;
 height:26px;
 }
 
-
-
-
-.sidebar .row-low{
+aside .row-low{
   height: 80px;
-  position: sticky;
 }
 
-.sidebar .row-low .col{
-  height: 50%;
-  justify-content: flex-start;
-  align-items: center;
+aside .row-low .col{
+  padding: 10px 0px;
 }
 
-.sidebar .row-low .col svg{
-  width: 30px;
-  height: 30px;
-}
-
-.sidebar .row-low .col span{
+aside .row-low span{
   padding: 0px 10px;
 }
 
-.sidebar .row-low .col .profile{
+aside .row-low .border{
   width: 30px;
   height: 30px;
   background-color: rgb(128, 128, 128);
@@ -167,19 +136,12 @@ height:26px;
   overflow: hidden;
 }
 
-.sidebar .row-low .col .profile img{
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-
 
 .bar-fixed{
   width: calc(100vw - 230px);
   height: 90px;
   background-color: rgba(8, 11, 18, 0.5);
-  position: sticky;
+  position:absolute;
   z-index: 999;
   top: 0px;
   right: 0px;
@@ -187,53 +149,155 @@ height:26px;
   align-items: center;
 }
 
-.menu{
-  width: 100%;
-justify-content: center;
 
+
+.box-body{
+  height: calc(100% - 90px);
+  overflow: auto;
+  margin-top: 90px;
+  padding: 20px 15px;
 }
 
-.menu ul{
+.box-body nav{
+  width: 100%;
+justify-content: center;
+align-items: center;
+}
+
+.box-body nav ul{
 flex-wrap:wrap;
 justify-content: center;
 }
 
-.menu ul li{
-padding: 20px 30px;
+.box-body nav li{
+padding: 15px 25px;
+}
+
+.box-body nav li a{
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+ color: gray;
+}
+
+.wrap{
+width:100%; 
+}
+
+.wrap .cart-disc{
+  height: 100%;
+  width: calc(100% / 6);
+  flex-direction: column;
+  align-items: center;
+  margin-right: 15px;
 }
 
 
+.wrap .image-disc img{
+width: 100%;
+}
 
-
+.wrap .text-disc{
+  text-align: center;
+  color: gray;
+}
 
 .player{
   width: 100%;
   height: 90px;
   background-color: rgb(40, 40, 40);
+  position: sticky;
 }
 
 .player .row-player{
-  height: 100%;
-justify-content: space-between;
-}
-
-.player .row-player{
-  width: 100%;
+ height: 100%;
+ width: 100%;
+ justify-content: space-between;
 }
 
 p{
+  color: gray;
+}
+
+/* Funzioni before */
+
+.box-body nav a::before{
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translate(-50%, 0);
+  width: 50%;
+  height: 3px;
+  background-color: rgb(173, 255, 47);
+  border-radius: 4px;
+  scale: 0 1;
+  transform-origin: center;
+}
+
+.box-body nav a:hover{
   color: white;
+}
+
+.box-body nav a:hover::before{
+  scale: 1;
 }
 
 
 
+
+
+/* media query 1100 */
+
+@media screen and (max-width:1100px) {
+
+  .wrap{
+    flex-wrap: wrap; 
+    width:100%;
+    }
+
+    .wrap .cart-disc{
+      height: 100%;
+      width: calc(100% / 5);
+      flex-direction: column;
+      align-items: center;
+      margin-right: 15px;
+    }
+}
+
+/* media query 768 */
+
+@media screen and (max-width:768px) {
+  .box-body{
+    height: calc(100% - 90px);
+    overflow: auto;
+    margin-top: 90px;
+    padding: 50px 5px;
+  
+  }
+
+  .wrap{
+    flex-wrap: wrap; 
+    width:100%;
+    }
+
+    .wrap .cart-disc{
+      height: 100%;
+      width: calc(100% / 5);
+      flex-direction: column;
+      align-items: center;
+      margin-right: 15px;
+    }
+}
+
+/* media query 600 */
 
 
 @media screen and (max-width:600px) {
 .content .box-content{
   width: 100%;
 }
-  .sidebar{
+  aside{
   width: 50px;
   padding: 10px;
  }
@@ -243,37 +307,61 @@ p{
   height: 50px;
 }
 
-.sidebar{
+aside{
   flex-direction: column;
   align-content: center;
 }
 
-.sidebar .row-low{
+aside .row-high .image-spotfy-mobile{
+  display: inline-block;
+}
+
+aside .row-low{
   flex-direction: column;
 }
 
-.sidebar .row-low .col .download{
+aside .row-low .col .download{
   width: 90%;
   height: 100%;
 }
 
-.sidebar .row-low .col .profile{
+aside .row-low .col .profile{
   width: 100%;
   height: 65%;
 }
 
+aside .playlist-top li{
+  margin: 5px 0;
+}
 
 .desktop,
 .playlist-down,
 .playlist-top ul li span,
-.sidebar .row-high .image-spotfy-desktop,
-.sidebar .row-low .col span{
+aside .row-high .image-spotfy-desktop,
+aside .row-low .col span{
   display: none;
+}
+
+.box-body{
+  height: calc(100% - 90px);
+  overflow: auto;
+  margin-top: 90px;
 
 }
 
+.wrap{
+  justify-content: center;
+  width:100%;
+  }
+
+  .wrap .cart-disc{
+    height: 100%;
+    width: 46%;
+    margin: 0px;
+    padding: 5px;
+  }
 }
 
 
 
-@media screen and (max-width:700px) {}
+
