[add]image-play

--- a/css/style.css
+++ b/css/style.css
@@ -128,9 +128,21 @@ aside .row-high .playlist-down{
   height: calc(100% - 180px);
 }
 
-aside .row-high .playlist-down .plus {
+aside .row-high .playlist-down .plus{
   padding: 0px 15px ;
   margin: 10px 0px 0px 0px;
+  width: fit-content;
+}
+
+aside .row-high .playlist-down .plus i{
+font-size: 1.5rem;
+padding: 12px;
+color: black;
+background-color: gray;
+}
+
+aside .row-high .playlist-down .plus a{
+  font-weight: 600;
 }
 
 aside .row-high h3{
@@ -255,42 +267,33 @@ width:100%;
   margin-right: 15px;
 }
 
+.wrap .image-disc{
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+
 .wrap .image-disc img{
 width: 100%;
 height: 100%;
 }
 
-.wrap .image-disc{
-<<<<<<< HEAD
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
+
 
 .wrap .image-disc .image-play{
-  width: 100%;
-  height: 100%;
-  position: relative;
-  justify-content: center;
-=======
-  position: relative;
->>>>>>> 2ad71187dd43628c3eb8d60df1be854384256011
-  align-items: center;
+  position:absolute;
+  display: none;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
 
 .wrap .image-disc .fa-circle-play{
-  font-size: 3rem;
-position: absolute;
-display: none;
-<<<<<<< HEAD
+font-size: 3rem;
 color: white;
-=======
-width: 100%;
-height: 100%;
-color: white;
-text-align: center;
-padding-top: 75px;
->>>>>>> 2ad71187dd43628c3eb8d60df1be854384256011
 }
 
 .wrap .image-disc.br-rd img{
@@ -313,9 +316,9 @@ padding-top: 75px;
 }
 
 .player .row-player{
- height: 100%;
- width: 100%;
- justify-content: space-between;
+height: 100%;
+width: 100%;
+justify-content: space-between;
 }
 
 .player .row-player .row-box:nth-child(2){
@@ -445,42 +448,25 @@ padding: 0px 10px;
 .player .row-player .row-box.last .bar-volume .bar-volume-white .bar-volume-circle{
     position: absolute;
     display: none;
-<<<<<<< HEAD
     right:0px;
-=======
-    left:30px;
->>>>>>> 2ad71187dd43628c3eb8d60df1be854384256011
     bottom: 0px;
     transform: translate(0%, 40%);
     height: 20px;
     width: 20px;
-<<<<<<< HEAD
     background-color: rgb(255, 255, 255);
-=======
-    background-color: gray;
->>>>>>> 2ad71187dd43628c3eb8d60df1be854384256011
     border-radius: 50%;
 }
 
 .player .row-player .row-box.center .bar-playback-time .bar-playback-white .bar-playback-circle{
   position: absolute;
   display: none;
-<<<<<<< HEAD
- right: 0px;
+  right: 0px;
   bottom: 0px;
   transform: translate(100%, 40%);
   height: 20px;
   width: 20px;
   background-color: rgb(255, 255, 255);
-=======
-  left:150px;
-  bottom: 0px;
   transform: translate(100%, 40%);
-  height: 20px;
-  
-  width: 20px;
-  background-color: gray;
->>>>>>> 2ad71187dd43628c3eb8d60df1be854384256011
   border-radius: 50%;
 }
 
@@ -497,22 +483,19 @@ padding: 0px 10px;
   height: 1.5px;
   background-color: rgb(173, 255, 47);
   border-radius: 4px;
- /*  scale: 0; */
   transform-origin: center;
 }
 
-/* .box-body nav a:hover::before{
-  scale: 1;
-}
-<<<<<<< HEAD
- */
-=======
 
->>>>>>> 2ad71187dd43628c3eb8d60df1be854384256011
+
 .box-body nav a:hover,
 aside .row-high .playlist-down a:hover,
 aside .row-high .playlist-top ul li a:hover{
   color: white;
+}
+
+aside .row-high .playlist-down .plus:hover i{
+  background-color: white;
 }
 
 aside .row-high .playlist-top ul li:hover{
@@ -530,15 +513,15 @@ aside .row-high .playlist-top ul li:hover{
     color: white;
   }
 
-  .wrap .image-disc:hover {
+  .wrap .image-disc img:hover {
     opacity: 0.5;
+    scale: 1.05;
   }
 
-  .wrap .image-disc:hover .fa-circle-play{
+  .wrap .image-disc:hover .image-play{
     display: inline;
   }
 
-<<<<<<< HEAD
   .player .row-player .row-box.center .bar-playback-time:hover .bar-playback-white,
   .player .row-player .row-box.last .bar-volume:hover .bar-volume-white{
     background-color: rgb(173, 255, 47);
@@ -552,14 +535,14 @@ aside .row-high .playlist-top ul li:hover{
   .player .row-player .row-box .name-player span:hover{
     text-decoration: underline;
     color: white;
-=======
+  }
+
   .player .row-player .row-box.last .bar-volume:hover .bar-volume-circle{
     display: inline;
   }
     
   .player .row-player .row-box.center .bar-playback-time:hover .bar-playback-circle{
     display: inline;
->>>>>>> 2ad71187dd43628c3eb8d60df1be854384256011
   }
 
 /* media query 1100 */
@@ -654,10 +637,8 @@ aside .playlist-top li .img-svg img{
   height: 30px;
 }
 
-<<<<<<< HEAD
 .playlist-down,
 aside .row-high .image-spotfy-desktop,
-=======
 /* .playlist-down,
 .playlist-top a,
 aside .row-high .image-spotfy-desktop,
@@ -665,7 +646,6 @@ aside .row-low .col span{
 } */
 .playlist-down,
 aside .row-high .image-spotfy-desktop,
->>>>>>> 2ad71187dd43628c3eb8d60df1be854384256011
 .playlist-top a,
 aside .row-low .col a,h4{
 display: none;
